Added Milligram and implemented header/nav.

--- a/web-client/index.mustache
+++ b/web-client/index.mustache
@@ -4,8 +4,20 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Name My Var</title>
+
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="milligram.css">
+	<link rel="stylesheet" href="common.css">
+	<link rel="stylesheet" href="header.css">
+	<link rel="stylesheet" href="nav.css">
 </head>
 <body>
+	{{> header}}
 	{{> nav}}
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="header.js"></script>
+	<script src="nav.js"></script>
 </body>
 </html>
