--- a/web-client/nav.mustache
+++ b/web-client/nav.mustache
@@ -1,1 +1,28 @@
-<div>I am nav</div>
+<div class="sidebar z-depth-2">
+	<ul>
+		<li>
+			<a href="#" class="nav-link nav-menu-button">
+				<div class="nav-link-icon">M</div>
+				<div class="nav-link-text">Menu</div>
+			</a>
+		</li>
+		<li>
+			<a href="#" class="nav-link">
+				<div class="nav-link-icon">H</div>
+				<div class="nav-link-text">Home</div>
+			</a>
+		</li>
+		<li>
+			<a href="#" class="nav-link">
+				<div class="nav-link-icon">T</div>
+				<div class="nav-link-text">Tips</div>
+			</a>
+		</li>
+		<li>
+			<a href="#" class="nav-link">
+				<div class="nav-link-icon">C</div>
+				<div class="nav-link-text">Code</div>
+			</a>
+		</li>
+	</ul>
+</div>
