Add material icons

--- a/web-client/nav.mustache
+++ b/web-client/nav.mustache
@@ -2,25 +2,25 @@
 	<ul>
 		<li>
 			<a href="#" class="nav-link nav-menu-button">
-				<div class="nav-link-icon">M</div>
+				<div class="nav-link-icon"><i class="material-icons">menu</i></div>
 				<div class="nav-link-text">Menu</div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="nav-link">
-				<div class="nav-link-icon">H</div>
+				<div class="nav-link-icon"><i class="material-icons">home</i></div>
 				<div class="nav-link-text">Home</div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="nav-link">
-				<div class="nav-link-icon">T</div>
+				<div class="nav-link-icon"><i class="material-icons">lightbulb_outline</i></div>
 				<div class="nav-link-text">Tips</div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="nav-link">
-				<div class="nav-link-icon">C</div>
+				<div class="nav-link-icon"><i class="material-icons">code</i></div>
 				<div class="nav-link-text">Code</div>
 			</a>
 		</li>
