--- a/web-client/header.mustache
+++ b/web-client/header.mustache
@@ -1,6 +1,6 @@
 <header class="clearfix z-depth-1">
 	<a href="#" class="nav-link nav-menu-button float-left only-mobile">
-		<div class="nav-link-icon">M</div>
+		<div class="nav-link-icon"><i class="material-icons">menu</i></div>
 	</a>
 	<div class="header-title">Name My Var</div>
 </header>
