--- a/web-client/index.mustache
+++ b/web-client/index.mustache
@@ -6,6 +6,7 @@
 	<title>Name My Var</title>
 
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="milligram.css">
 	<link rel="stylesheet" href="common.css">
