--- a/web-client/common.css
+++ b/web-client/common.css
@@ -5,13 +5,15 @@ html, body {
 /* Stolen from materialize */
 .z-depth-1 {
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+	z-index: 1;
 }
 .z-depth-2 {
 	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+	z-index: 2;
 }
 
 @media (min-width: 40.0rem) {
 	.only-mobile {
-		display: none;
+		display: none !important;
 	}
 }
