--- a/web-client/index.mustache
+++ b/web-client/index.mustache
@@ -25,6 +25,21 @@
 				<input type="text" class="banner-search">
 			</form>
 		</div>
+
+		<div class="content-container">
+			<div class="content-block">
+				<a><i class="material-icons">lightbulb_outline</i></a>
+				<a><div class="content-title">Naming Tips</div></a>
+				<p>Cupcake ipsum dolor. Sit amet sugar plum carrot cake lemon drops cake. Tiramisu pie halvah apple pie. Carrot cake carrot cake wafer marshmallow jelly cheesecake.
+</p>
+			</div>
+			<div class="content-block">
+				<div class="content-icon"><i class="material-icons">code</i></div>
+				<div class="content-title">Source Code</div>
+				<p>Cupcake ipsum dolor sit amet tootsie roll sesame snaps sweet roll. Toffee chocolate bar halvah toffee gummies. Candy dessert soufflé brownie donut tootsie roll jelly beans.
+</p>
+			</div>
+		</div>
 	</main>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
