--- a/web-client/index.mustache
+++ b/web-client/index.mustache
@@ -28,16 +28,20 @@
 
 		<div class="content-container">
 			<div class="content-block">
-				<a><i class="material-icons">lightbulb_outline</i></a>
-				<a><div class="content-title">Naming Tips</div></a>
-				<p>Cupcake ipsum dolor. Sit amet sugar plum carrot cake lemon drops cake. Tiramisu pie halvah apple pie. Carrot cake carrot cake wafer marshmallow jelly cheesecake.
+				<a class="content-icon"><i class="material-icons">lightbulb_outline</i></a>
+				<div class="content-right">
+					<a class="content-title">Naming Tips</a>
+					<p>Cupcake ipsum dolor. Sit amet sugar plum carrot cake lemon drops cake. Tiramisu pie halvah apple pie. Carrot cake carrot cake wafer marshmallow jelly cheesecake.
 </p>
+				</div>
 			</div>
 			<div class="content-block">
-				<div class="content-icon"><i class="material-icons">code</i></div>
-				<div class="content-title">Source Code</div>
-				<p>Cupcake ipsum dolor sit amet tootsie roll sesame snaps sweet roll. Toffee chocolate bar halvah toffee gummies. Candy dessert soufflé brownie donut tootsie roll jelly beans.
+				<a class="content-icon"><i class="material-icons">code</i></a>
+				<div class="content-right">
+					<a class="content-title">Source Code</a>
+					<p>Cupcake ipsum dolor sit amet tootsie roll sesame snaps sweet roll. Toffee chocolate bar halvah toffee gummies. Candy dessert soufflé brownie donut tootsie roll jelly beans.
 </p>
+				</div>
 			</div>
 		</div>
 	</main>
