--- a/web-client/index.mustache
+++ b/web-client/index.mustache
@@ -20,9 +20,9 @@
 
 	<main>
 		<div class="banner-container">
-			<div class="banner-title">Find suggestions</div>
+			<div class="banner-title">Find Suggestions</div>
 			<form>
-				<input type="text" class="banner-search">
+				<input type="text" class="banner-search" placeholder="Enter search term...">
 			</form>
 		</div>
 
