--- a/web-client/header.mustache
+++ b/web-client/header.mustache
@@ -2,5 +2,5 @@
 	<a href="#" class="nav-link nav-menu-button float-left only-mobile">
 		<div class="nav-link-icon"><i class="material-icons">menu</i></div>
 	</a>
-	<div class="header-title">Name My Var</div>
+	<div class="header-title">name my var</div>
 </header>
