--- a/web-client/index.mustache
+++ b/web-client/index.mustache
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Name My Var</title>
+	<title>name my var</title>
 
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -19,29 +19,10 @@
 	{{> nav}}
 
 	<main>
-		<div class="banner-container">
-			<div class="banner-title">Find Suggestions</div>
-			<form>
-				<input type="text" class="banner-search" placeholder="Enter search term...">
-			</form>
-		</div>
-
-		<div class="content-container">
-			<div class="content-block">
-				<a class="content-icon"><i class="material-icons">lightbulb_outline</i></a>
-				<div class="content-right">
-					<a class="content-title">Naming Tips</a>
-					<p>Cupcake ipsum dolor. Sit amet sugar plum carrot cake lemon drops cake. Tiramisu pie halvah apple pie. Carrot cake carrot cake wafer marshmallow jelly cheesecake.
-</p>
-				</div>
-			</div>
-			<div class="content-block">
-				<a class="content-icon"><i class="material-icons">code</i></a>
-				<div class="content-right">
-					<a class="content-title">Source Code</a>
-					<p>Cupcake ipsum dolor sit amet tootsie roll sesame snaps sweet roll. Toffee chocolate bar halvah toffee gummies. Candy dessert soufflé brownie donut tootsie roll jelly beans.
-</p>
-				</div>
+		<div class="container">
+			<div class="banner-container">
+				<div class="banner-title">find alternatives</div>
+				<input type="text" class="search-input" placeholder="enter search term...">
 			</div>
 		</div>
 	</main>
@@ -49,5 +30,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="header.js"></script>
 	<script src="nav.js"></script>
+	<script src="index.js"></script>
 </body>
 </html>
