--- a/web-client/nav.mustache
+++ b/web-client/nav.mustache
@@ -3,25 +3,25 @@
 		<li>
 			<a href="#" class="nav-link nav-menu-button">
 				<div class="nav-link-icon"><i class="material-icons">menu</i></div>
-				<div class="nav-link-text">Menu</div>
+				<div class="nav-link-text">menu</div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="nav-link">
 				<div class="nav-link-icon"><i class="material-icons">home</i></div>
-				<div class="nav-link-text">Home</div>
+				<div class="nav-link-text">home</div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="nav-link">
 				<div class="nav-link-icon"><i class="material-icons">lightbulb_outline</i></div>
-				<div class="nav-link-text">Tips</div>
+				<div class="nav-link-text">tips</div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="nav-link">
 				<div class="nav-link-icon"><i class="material-icons">code</i></div>
-				<div class="nav-link-text">Code</div>
+				<div class="nav-link-text">code</div>
 			</a>
 		</li>
 	</ul>
