--- a/web-client/index.css
+++ b/web-client/index.css
@@ -1,54 +1,46 @@
-/* Banner */
-.banner-container {
-	background-color: #EEE;
-	padding: 7.0rem 5.0rem 11.0rem 5.0rem;
+main {
+	bottom: 0;
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
 }
 
-.banner-container form {
-	margin-bottom: 0;
+main > .container {
+	height: 100%;
+}
+
+.banner-container {
+	position: relative;
+	top: 40%;
+	transform: translateY(-50%);
+	transition: all 0.5s;
+}
+
+.banner-container.search-mode {
+	top: 0;
+	transform: translateY(6.0rem);
 }
 
 .banner-title {
+	bottom: 6.0rem;
 	font-size: 6.0rem;
-	margin-bottom: 4.0rem;
+	left: 0;
+	opacity: 1;
+	position: absolute;
+	right: 0;
 	text-align: center;
+	transition: all 1.5s;
 }
 
-input.banner-search {
+.search-mode .banner-title {
+	opacity: 0;
+	transition: all 0.3s;
+}
+
+input.search-input {
 	background-color: white;
 	display: block;
 	margin: 0 auto;
-	width: 48.0rem;
-}
-
-/* Content */
-.content-container {
-	padding: 7.0rem 5.0rem 11.0rem 5.0rem;
-}
-
-.content-block {
-	margin: 2.4rem 8.0rem;
-}
-
-.content-block .content-icon {
-	float: left;
-}
-
-.content-block i.material-icons {
-	font-size: 8.0rem;
-	padding: 2.0rem;
-	border: 3px solid #9b4dca;
-	border-radius: 8.0rem;
-}
-
-.content-block .content-right {
-	margin-left: 18.0rem;
-}
-
-.content-block .content-title {
-	font-size: 4.0rem;
-}
-
-.content-block p {
-
+	max-width: 48.0rem;
 }
