--- a/web-client/index.css
+++ b/web-client/index.css
@@ -10,20 +10,23 @@ main > .container {
 	height: 100%;
 }
 
-.banner-container {
+.banner {
 	position: relative;
 	top: 40%;
 	transform: translateY(-50%);
 	transition: all 0.5s;
+	padding-top: 0;
+	margin-bottom: 6.0rem;
 }
 
-.banner-container.search-mode {
+.search-mode .banner {
 	top: 0;
-	transform: translateY(6.0rem);
+	transform: translateY(0);
+	padding-top: 6.0rem;
 }
 
 .banner-title {
-	bottom: 6.0rem;
+	bottom: 8.0rem;
 	font-size: 6.0rem;
 	left: 0;
 	opacity: 1;
@@ -43,4 +46,72 @@ input.search-input {
 	display: block;
 	margin: 0 auto;
 	max-width: 48.0rem;
+}
+
+
+.search-results {
+	visibility: hidden;
+	opacity: 0;
+	transition: all 0.2s;
+}
+
+.search-mode .search-results {
+	visibility: visible;
+	opacity: 1;
+	transition: all 1.0s;
+}
+
+.search-results section {
+	margin-top: 1.0rem;
+	margin-bottom: 1.0rem;
+}
+
+.search-results .section-label {
+	font-size: 1.6rem;
+	letter-spacing: 0.1rem;
+	text-align: right;
+	position: relative;
+	right: 2.0rem;
+}
+
+.search-terms-container {
+	list-style: none;
+	display: flex !important;
+	justify-content: space-between;
+}
+
+.search-terms-container li {
+	width: calc(25% - 0.5rem);
+}
+
+.search-terms-container a {
+	display: block;
+	background-color: #f4f4f4;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+}
+
+.examples-container {
+	list-style-position: outside;
+	padding-left: 3.0rem !important;
+}
+
+.examples-container .repo-link {
+	display: block;
+}
+
+.examples-container .item-link {
+	display: block;
+	padding-left: 2.0rem;
+}
+
+.definitions-container {
+	list-style-position: outside;
+	padding-left: 3.0rem !important;
+}
+
+.suggestion-link {
+	display: block;
+	text-align: center;
+	margin: 3.0rem 0;
 }
