Tweaked transitions and cleaned up CSS.

--- a/web-client/index.mustache
+++ b/web-client/index.mustache
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="nav.css">
 	<link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body class="block-transitions">
 	{{> header}}
 	{{> nav}}
 
@@ -84,6 +84,7 @@
 	</main>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="common.js"></script>
 	<script src="header.js"></script>
 	<script src="nav.js"></script>
 	<script src="index.js"></script>
