--- a/web-client/nav.mustache
+++ b/web-client/nav.mustache
@@ -7,15 +7,15 @@
 			</a>
 		</li>
 		<li>
-			<a href="#" class="nav-link">
+			<a href="index.html" class="nav-link">
 				<div class="nav-link-icon"><i class="material-icons">home</i></div>
 				<div class="nav-link-text">home</div>
 			</a>
 		</li>
 		<li>
-			<a href="#" class="nav-link">
-				<div class="nav-link-icon"><i class="material-icons">lightbulb_outline</i></div>
-				<div class="nav-link-text">tips</div>
+			<a href="faq.html" class="nav-link">
+				<div class="nav-link-icon"><i class="material-icons">help_outline</i></div>
+				<div class="nav-link-text">faqs</div>
 			</a>
 		</li>
 		<li>
