change faqs to faq

--- a/web-client/faq.mustache
+++ b/web-client/faq.mustache
@@ -20,7 +20,7 @@
 
 	<main>
 		<div class="container">
-			<h1>faqs</h1>
+			<h1>faq</h1>
 			<h2>what is this thing?</h2>
 			<p>namemyvar.com is a search engine for variable, function, and class names.</p>
 			<p>Given an input name, such as “error”, the website will provide suggestions for alternative and related names, common uses, and examples of where the name is used in the wild. It will also rate the specificity of the name (experimental) to suggest where it is most appropriate to use.</p>
