--- a/web-client/nav.mustache
+++ b/web-client/nav.mustache
@@ -15,7 +15,7 @@
 		<li>
 			<a href="faq.html" class="nav-link">
 				<div class="nav-link-icon"><i class="material-icons">help_outline</i></div>
-				<div class="nav-link-text">faqs</div>
+				<div class="nav-link-text">faq</div>
 			</a>
 		</li>
 		<li>
